fixed styles for correct position on mobile and desktop

--- a/src/app/components/time/time.component.scss
+++ b/src/app/components/time/time.component.scss
@@ -50,6 +50,12 @@
     }
   }
 
+  td {
+    &.minutes-col {
+      padding-left: 25px !important;
+    }
+  }
+
   .wraper {
     display: flex;
     flex-direction: row;
